# compilerbau

./: AbsCPP.hi  AbsCpp.hi  AbsCpp.hs  AbsCpp.hs.bak  AbsGrammar.hi  AbsGrammar.hs  AbsNew.hi  AbsNew.hs  AbsNew.hs.bak  DocCpp.txt  DocCpp.txt.bak  DocGrammar.txt  DocNew.txt  DocNew.txt.bak  LexCPP.hi  LexCPP.hs  LexCpp.hi  LexCpp.hs  LexCpp.x  LexCpp.x.bak  LexGrammar.hi  LexGrammar.hs  LexGrammar.x  LexNew.hi  LexNew.hs  LexNew.x  LexNew.x.bak  Makefile.bak  ParCPP.hi  ParCPP.hs  ParCpp.hi  ParCpp.hs  ParCpp.info  ParCpp.y  ParCpp.y.bak  ParGrammar.hi  ParGrammar.hs  ParGrammar.y  ParNew.hi  ParNew.hs  (+35 more)
codeGenerator/: CodeGenerator.C  CodeGenerator.H
codeGenerator/tccpp/: Absyn.H  Skeleton.C  SymbolTableBuilder.C  Test.C
codeGenerator/test/: a.out  buildertest  buildertest.c  testprog.bc  testprog.c  testprog.ll  testprogopt.bc  testprogopt.ll
cpp/: Absyn.H  CMakeLists.txt  CodeGenerator.C  CodeGenerator.H  ConstantFolder.C  ConstantFolder.H  Makefile  Skeleton.H  SymbolTableBuilder.C  SymbolTableBuilder.H  Test.C  TestCPP  TypeChecker.C  TypeChecker.H  tccpp
lab1-testsuite-larger/: progs-test-lab1  progs-test-lab1.hi
lab1-testsuite-larger/lab1-test-dir/: AbsCPP.hi  AbsCPP.hs  AbsCPP.hs.bak  DocCPP.txt  DocCPP.txt.bak  LexCPP.hi  LexCPP.hs  LexCPP.x  LexCPP.x.bak  ParCPP.hi  ParCPP.hs  ParCPP.info  ParCPP.y  ParCPP.y.bak  PrintCPP.hs  PrintCPP.hs.bak  SkelCPP.hs  SkelCPP.hs.bak  testdriver.hi
typechecker/: .Lexer.C.swp  .goutputstream-VJGZZY  Absyn.C  Absyn.H  Lexer.C  Makefile  Parser.C  TypeChecker.C  TypeChecker.H  tccpp  tccpp.C
